# sqlfluff

plugins/sqlfluff-templater-dataform/: README.md  pyproject.toml
plugins/sqlfluff-templater-dataform/docker/: Dockerfile.dev  docker-compose.yml  init  startup
plugins/sqlfluff-templater-dataform/sqlfluff_templater_dataform/: templater.py
plugins/sqlfluff-templater-dataform/test/: conftest.py  templater_test.py
plugins/sqlfluff-templater-dataform/test/fixtures/dbt/: test.sql  test.sqlx
plugins/sqlfluff-templater-dbt/test/fixtures/dbt180/: .sqlfluff
plugins/sqlfluff-templater-dbt/test/fixtures/dbt180/models/: test.sql
