[project]
name = "sqlfluff-templater-dataform"
version = "3.1.1"
description = "Lint your dataform project SQL"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
  {name = "Alan Cruickshank", email = "alan@designingoverload.com"},
]
license = {file = "LICENSE.md"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities",
    "Topic :: Software Development :: Quality Assurance",
]
keywords = [
    "sqlfluff",
    "sql",
    "linter",
    "formatter",
    "bigquery",
    "clickhouse",
    "databricks",
    "db2",
    "duckdb",
    "exasol",
    "greenplum",
    "hive",
    "materialize",
    "mysql",
    "postgres",
    "redshift",
    "snowflake",
    "soql",
    "sparksql",
    "sqlite",
    "teradata",
    "tsql",
    "dbt",
]
dependencies = [
    "sqlfluff==3.1.1",
    "dbt-core>=1.0.0",
    "jinja2-simple-tags>=0.3.1",
]

[project.urls]
Homepage = "https://www.sqlfluff.com"
Documentation = "https://docs.sqlfluff.com"
Source = "https://github.com/sqlfluff/sqlfluff"
Changes = "https://github.com/sqlfluff/sqlfluff/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/sqlfluff/sqlfluff/issues"
Twitter = "https://twitter.com/SQLFluff"
Chat = "https://github.com/sqlfluff/sqlfluff#sqlfluff-on-slack"

[project.entry-points.sqlfluff]
sqlfluff_templater_dataform = "sqlfluff_templater_dataform"

[tool.setuptools.packages.find]
include = ["sqlfluff_templater_dataform", "sqlfluff_templater_dataform.osmosis"]
